# EasyStreamDJ

./: .gitignore  README.md  __main__.py  config.py  dj.py  ezStreamDj.py  links.json  main.py  pyproject.toml  requarements.txt  requirements.txt  settings.py  tests.py  tests.sh  utils.py
dj/: streamdj.py  ui.py  youtube.py
sender/: AllFromYoutubePlaylist.py  EndlessSenderByLink.py  EnterToSendFromJson.py  SendAllFronJson.py  Sender.py  __init__.py  from_yt_playlist.py
static/: script.js  settings.js
templates/: index.html  settings.html
