[tool.poetry]
name = "easy_streamdj"
version = "0.1.0"
description = ""
authors = ["a <skipper224483@gmail.com>"]
license = "GPL-3.0"

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.11.1"
names = "^0.3.0"
aiohttp = {extras = ["speedups"], version = "^3.8.1"}

[tool.poetry.dev-dependencies]
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
